--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,60 @@
 /*  your css code here. If applicable */
+/* Set the page background color using :root */
+:root {
+    --page-bg-color: rgb(135, 206, 235);
+}
+
+body {
+    background-color: var(--page-bg-color);
+    font-family: Arial, sans-serif;
+    padding: 20px;
+}
+
+/* Article paragraphs styling */
+article p:first-child {
+    color: white;
+    background-color: black;
+    padding: 5px;
+}
+
+article p:nth-child(2) {
+    color: inherit; /* Standard text color */
+    background-color: transparent;
+    padding: 5px;
+}
+
+article p:last-child {
+    color: red;
+    padding: 5px;
+}
+
+/* Unordered list styling */
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 20px;
+}
+
+ul li {
+    width: 50%;
+    padding: 10px;
+    background-color: gray;
+    margin-bottom: 5px;
+}
+
+/* Odd items have white background */
+ul li:nth-child(odd) {
+    background-color: white;
+}
+
+/* First and last items font-size */
+ul li:first-child,
+ul li:last-child {
+    font-size: 22px;
+}
+
+/* Third-to-last item pink background */
+ul li:nth-last-child(3) {
+    background-color: pink;
+}
+
